--- a/index.html
+++ b/index.html
@@ -11,20 +11,43 @@
             sizes="32x32"
             href="./images/favicon-32x32.png"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
+        <link rel="stylesheet" href="./css/style.css" />
 
         <title>Frontend Mentor | Sunnyside agency landing page</title>
     </head>
     <body>
         <nav>
+            <img src="./images/logo.svg" alt="" />
             <ul>
-                <li>About</li>
-                <li>Services</li>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
 
-        <header>We are creatives</header>
+        <header>
+            <h1>We are creatives</h1>
+            <img
+                src="./images/icon-arrow-down.svg"
+                alt="icon-arrow-down"
+                class="arrow"
+            />
+            <div class="navbar">
+                <img src="./images/logo.svg" alt="logo" class="logo" /><img
+                    src="./images/icon-hamburger.svg"
+                    alt="icon-hamburger"
+                    class="burger"
+                />
+            </div>
+        </header>
 
         <section class="about">
             <div class="keypoints">
