--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
     </head>
     <body>
         <nav>
-            <img src="./images/logo.svg" alt="" />
-            <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Projects</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
+            <div class="container">
+                <img src="./images/logo.svg" alt="" />
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
         </nav>
 
         <header>
@@ -149,5 +151,6 @@
                 <li><a href="">Projects</a></li>
             </ul>
         </footer>
+        <script src="./js/main.js"></script>
     </body>
 </html>
