working on desktop nav

--- a/index.html
+++ b/index.html
@@ -23,134 +23,138 @@
         <title>Frontend Mentor | Sunnyside agency landing page</title>
     </head>
     <body>
-        <nav>
-            <div class="container">
-                <img src="./images/logo.svg" alt="" />
+        <div class="wrapper">
+            <nav class="mobile">
+                <div class="container">
+                    <ul>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Projects</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <header>
+                <h1>We are creatives</h1>
+                <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="icon-arrow-down"
+                    class="arrow"
+                />
+                <div class="navbar">
+                    <img src="./images/logo.svg" alt="logo" class="logo" /><img
+                        src="./images/icon-hamburger.svg"
+                        alt="icon-hamburger"
+                        class="burger"
+                    />
+                </div>
+            </header>
+
+            <section class="about">
+                <div class="keypoints">
+                    <div class="contentBox">
+                        <h2>Transform your brand</h2>
+                        <p>
+                            We are a full-service creative agency specializing
+                            in helping brands grow fast. Engage your clients
+                            through compelling visuals that do most of the
+                            marketing for you.
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
+                    <img
+                        src="./images/desktop/image-transform.jpg"
+                        alt="image-transform"
+                    />
+                </div>
+
+                <div class="keypoints">
+                    <div class="contentBox">
+                        <h2>Stand out to the right audience</h2>
+                        <p>
+                            Using a collaborative formula of designers,
+                            researchers, photographers, videographers, and
+                            copywriters, we’ll build and extend your brand in
+                            digital places.
+                        </p>
+                        <a href="#">Learn more</a>
+                    </div>
+                    <img
+                        src="./images/desktop/image-transform.jpg"
+                        alt="image-transform"
+                    />
+                </div>
+
+                <div class="keypoints">
+                    <div class="additionalPoints">
+                        <h3>Graphic design</h3>
+                        <p>
+                            Great design makes you memorable. We deliver artwork
+                            that underscores your brand message and captures
+                            potential clients’ attention.
+                        </p>
+                    </div>
+
+                    <div class="additionalPoints">
+                        <h3>Photography</h3>
+                        <p>
+                            Increase your credibility by getting the most
+                            stunning, high-quality photos that improve your
+                            business image.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="testimonials">
+                <h4>Client testimonials</h4>
+                <div class="testimonialcontainer">
+                    <div class="testimonial">
+                        <p class="quote">
+                            We put our trust in Sunnyside and they delivered,
+                            making sure our needs were met and deadlines were
+                            always hit.
+                        </p>
+                        <p class="author">Emily R.</p>
+                        <p class="position">Marketing Director</p>
+                    </div>
+                    <div class="testimonial">
+                        <p class="quote">
+                            Sunnyside’s enthusiasm coupled with their keen
+                            interest in our brand’s success made it a satisfying
+                            and enjoyable experience.
+                        </p>
+                        <p class="author">Thomas S.</p>
+                        <p class="position">Chief Operating Officer</p>
+                    </div>
+
+                    <div class="testimonial">
+                        <p class="quote">
+                            Incredible end result! Our sales increased over 400%
+                            when we worked with Sunnyside. Highly recommended!
+                        </p>
+                        <p class="author">Jennie F.</p>
+                        <p class="position">Business Owner</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="images">
+                <img src="" alt="photo" /><img src="" alt="photo" /><img
+                    src=""
+                    alt="photo"
+                /><img src="" alt="photo" />
+            </section>
+
+            <footer>
                 <ul>
                     <li><a href="">About</a></li>
                     <li><a href="">Services</a></li>
                     <li><a href="">Projects</a></li>
-                    <li><a href="">Contact</a></li>
                 </ul>
-            </div>
-        </nav>
-
-        <header>
-            <h1>We are creatives</h1>
-            <img
-                src="./images/icon-arrow-down.svg"
-                alt="icon-arrow-down"
-                class="arrow"
-            />
-            <div class="navbar">
-                <img src="./images/logo.svg" alt="logo" class="logo" /><img
-                    src="./images/icon-hamburger.svg"
-                    alt="icon-hamburger"
-                    class="burger"
-                />
-            </div>
-        </header>
-
-        <section class="about">
-            <div class="keypoints">
-                <div class="contentBox">
-                    <h2>Transform your brand</h2>
-                    <p>
-                        We are a full-service creative agency specializing in
-                        helping brands grow fast. Engage your clients through
-                        compelling visuals that do most of the marketing for
-                        you.
-                    </p>
-                    <a href="#">Learn more</a>
-                </div>
-                <img
-                    src="./images/desktop/image-transform.jpg"
-                    alt="image-transform"
-                />
-            </div>
-
-            <div class="keypoints">
-                <div class="contentBox">
-                    <h2>Stand out to the right audience</h2>
-                    <p>
-                        Using a collaborative formula of designers, researchers,
-                        photographers, videographers, and copywriters, we’ll
-                        build and extend your brand in digital places.
-                    </p>
-                    <a href="#">Learn more</a>
-                </div>
-                <img
-                    src="./images/desktop/image-transform.jpg"
-                    alt="image-transform"
-                />
-            </div>
-
-            <div class="keypoints">
-                <div class="additionalPoints">
-                    <h3>Graphic design</h3>
-                    <p>
-                        Great design makes you memorable. We deliver artwork
-                        that underscores your brand message and captures
-                        potential clients’ attention.
-                    </p>
-                </div>
-
-                <div class="additionalPoints">
-                    <h3>Photography</h3>
-                    <p>
-                        Increase your credibility by getting the most stunning,
-                        high-quality photos that improve your business image.
-                    </p>
-                </div>
-            </div>
-        </section>
-
-        <section class="testimonials">
-            <h4>Client testimonials</h4>
-            <div class="testimonialcontainer">
-                <div class="testimonial">
-                    <p class="quote">
-                        We put our trust in Sunnyside and they delivered, making
-                        sure our needs were met and deadlines were always hit.
-                    </p>
-                    <p class="author">Emily R.</p>
-                    <p class="position">Marketing Director</p>
-                </div>
-                <div class="testimonial">
-                    <p class="quote">
-                        Sunnyside’s enthusiasm coupled with their keen interest
-                        in our brand’s success made it a satisfying and
-                        enjoyable experience.
-                    </p>
-                    <p class="author">Thomas S.</p>
-                    <p class="position">Chief Operating Officer</p>
-                </div>
-
-                <div class="testimonial">
-                    <p class="quote">
-                        Incredible end result! Our sales increased over 400%
-                        when we worked with Sunnyside. Highly recommended!
-                    </p>
-                    <p class="author">Jennie F.</p>
-                    <p class="position">Business Owner</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="images">
-            <img src="" alt="photo" /><img src="" alt="photo" /><img
-                src=""
-                alt="photo"
-            /><img src="" alt="photo" />
-        </section>
-
-        <footer>
-            <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Projects</a></li>
-            </ul>
-        </footer>
+            </footer>
+        </div>
         <script src="./js/main.js"></script>
     </body>
 </html>
