--- a/index.html
+++ b/index.html
@@ -24,15 +24,13 @@
     </head>
     <body>
         <div class="wrapper">
-            <nav class="mobile">
-                <div class="container">
-                    <ul>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
+            <nav>
+                <ul class="container">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
             </nav>
 
             <header>
