--- a/index.html
+++ b/index.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- displays site properly based on user's device -->
 
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./images/favicon-32x32.png"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
-            rel="stylesheet"
-        />
-        <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
-        <link rel="stylesheet" href="./css/style.css" />
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-        <title>Frontend Mentor | Sunnyside agency landing page</title>
-    </head>
-    <body>
-        <div class="wrapper">
-            <nav>
-                <ul class="container">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Projects</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+        rel="stylesheet" />
+    <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
+    <link rel="stylesheet" href="./style/style.css" />
 
-            <header>
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+</head>
+
+<body>
+    <div class="wrapper">
+        <nav class='mobile'>
+            <ul class="container">
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+
+        <header>
+
+
+            <div class="navbar">
+                <img src="./images/logo.svg" alt="logo" class="logo" /><img src="./images/icon-hamburger.svg"
+                    alt="icon-hamburger" class="burger" />
+                <nav class='desktop'>
+                    <ul class="container">
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Projects</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="cta">
                 <h1>We are creatives</h1>
-                <img
-                    src="./images/icon-arrow-down.svg"
-                    alt="icon-arrow-down"
-                    class="arrow"
-                />
-                <div class="navbar">
-                    <img src="./images/logo.svg" alt="logo" class="logo" /><img
-                        src="./images/icon-hamburger.svg"
-                        alt="icon-hamburger"
-                        class="burger"
-                    />
-                </div>
-            </header>
+                <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow" />
+            </div>
+        </header>
 
-            <section class="about">
+        <!-- <section class="about">
                 <div class="keypoints">
                     <div class="contentBox">
                         <h2>Transform your brand</h2>
@@ -151,8 +152,9 @@
                     <li><a href="">Services</a></li>
                     <li><a href="">Projects</a></li>
                 </ul>
-            </footer>
-        </div>
-        <script src="./js/main.js"></script>
-    </body>
+            </footer> -->
+    </div>
+    <script src="./js/main.js"></script>
+</body>
+
 </html>
