working with navbar desktop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class='mobile'>
+        <nav>
             <ul class="container">
                 <li><a href="">About</a></li>
                 <li><a href="">Services</a></li>
@@ -34,14 +34,7 @@
             <div class="navbar">
                 <img src="./images/logo.svg" alt="logo" class="logo" /><img src="./images/icon-hamburger.svg"
                     alt="icon-hamburger" class="burger" />
-                <nav class='desktop'>
-                    <ul class="container">
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
+
             </div>
 
             <div class="cta">
