working with parcel setup

--- a/src/index.html
+++ b/src/index.html
@@ -1,55 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- displays site properly based on user's device -->
 
-        <link
-            rel="icon"
-            type="image/png"
-            sizes="32x32"
-            href="./images/favicon-32x32.png"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./style/style.css" />
-        <title>Frontend Mentor | Sunnyside agency landing page</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-    <body>
-        <div class="wrapper">
-            <header>
-                <div class="navbar">
-                    <img src="./images/logo.svg" alt="logo" class="logo" /><img
-                        src="./images/icon-hamburger.svg"
-                        alt="icon-hamburger"
-                        class="burger"
-                    />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="scss/style.scss" />
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+</head>
 
-                    <ul class="container">
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </div>
+<body>
+    <div class="wrapper">
+        <header>
+            <div class="navbar">
+                <img src="./images/logo.svg" alt="logo" class="logo" /><img src="./images/icon-hamburger.svg"
+                    alt="icon-hamburger" class="burger" />
 
-                <div class="cta">
-                    <h1>We are creatives</h1>
-                    <img
-                        src="./images/icon-arrow-down.svg"
-                        alt="icon-arrow-down"
-                        class="arrow"
-                    />
-                </div>
-            </header>
+                <ul class="container">
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Projects</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
 
-            <!-- <section class="about">
+            <div class="cta">
+                <h1>We are creatives</h1>
+                <img src="./images/icon-arrow-down.svg" alt="icon-arrow-down" class="arrow" />
+            </div>
+        </header>
+
+        <!-- <section class="about">
                 <div class="keypoints">
                     <div class="contentBox">
                         <h2>Transform your brand</h2>
@@ -152,7 +139,8 @@
                     <li><a href="">Projects</a></li>
                 </ul>
             </footer> -->
-        </div>
-        <script src="./js/main.js"></script>
-    </body>
+    </div>
+    <script src="./js/main.js"></script>
+</body>
+
 </html>
