working with parcel

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <!-- <nav>
+                <nav>
                     <img src="./images/logo.svg" alt="logo" class="logo" /><img
                         src="./images/icon-hamburger.svg"
                         alt="icon-hamburger"
@@ -37,7 +37,7 @@
                         <li><a href="">Projects</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
-                </nav> -->
+                </nav>
 
                 <div class="cta">
                     <h1>We are creatives</h1>
