--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,12 @@
                 </div>
             </header>
 
-            <!-- <section class="about">
+            <section class="about">
                 <div class="keypoints">
+                    <img
+                        src="./images/mobile/image-transform.jpg"
+                        alt="image-transform"
+                    />
                     <div class="contentBox">
                         <h2>Transform your brand</h2>
                         <p>
@@ -61,13 +65,13 @@
                         </p>
                         <a href="#">Learn more</a>
                     </div>
-                    <img
-                        src="./images/desktop/image-transform.jpg"
-                        alt="image-transform"
-                    />
                 </div>
 
                 <div class="keypoints">
+                    <img
+                        src="./images/mobile/image-stand-out.jpg"
+                        alt="image-stand-out"
+                    />
                     <div class="contentBox">
                         <h2>Stand out to the right audience</h2>
                         <p>
@@ -78,10 +82,6 @@
                         </p>
                         <a href="#">Learn more</a>
                     </div>
-                    <img
-                        src="./images/desktop/image-transform.jpg"
-                        alt="image-transform"
-                    />
                 </div>
 
                 <div class="keypoints">
@@ -105,7 +105,7 @@
                 </div>
             </section>
 
-            <section class="testimonials">
+            <!-- <section class="testimonials">
                 <h4>Client testimonials</h4>
                 <div class="testimonialcontainer">
                     <div class="testimonial">
