working with reponsive design

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             </header>
 
             <section class="about">
-                <div class="keypoints">
+                <div class="keypoints reversed">
                     <img
                         src="./images/mobile/image-transform.jpg"
                         alt="image-transform"
@@ -86,21 +86,25 @@
 
                 <div class="keypoints">
                     <div class="additionalPoints cherry">
-                        <h3>Graphic design</h3>
-                        <p>
-                            Great design makes you memorable. We deliver artwork
-                            that underscores your brand message and captures
-                            potential clients’ attention.
-                        </p>
+                        <div>
+                            <h3>Graphic design</h3>
+                            <p>
+                                Great design makes you memorable. We deliver
+                                artwork that underscores your brand message and
+                                captures potential clients’ attention.
+                            </p>
+                        </div>
                     </div>
 
                     <div class="additionalPoints orange">
-                        <h3>Photography</h3>
-                        <p>
-                            Increase your credibility by getting the most
-                            stunning, high-quality photos that improve your
-                            business image.
-                        </p>
+                        <div>
+                            <h3>Photography</h3>
+                            <p>
+                                Increase your credibility by getting the most
+                                stunning, high-quality photos that improve your
+                                business image.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
