done button decoration

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             </header>
 
             <section class="about">
-                <div class="keypoints reversed">
+                <div class="keypoints">
                     <img
                         src="./images/mobile/image-transform.jpg"
                         alt="image-transform"
@@ -63,7 +63,9 @@
                             through compelling visuals that do most of the
                             marketing for you.
                         </p>
-                        <button>Learn more</button>
+                        <div class="button">
+                            <button class="yellow">Learn more</button>
+                        </div>
                     </div>
                 </div>
 
@@ -80,7 +82,7 @@
                             copywriters, we’ll build and extend your brand in
                             digital places.
                         </p>
-                        <button>Learn more</button>
+                        <div class="button"><button>Learn more</button></div>
                     </div>
                 </div>
 
