--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!-- displays site properly based on user's device -->
 
         <link
             rel="icon"
@@ -50,7 +49,7 @@
             </header>
 
             <section class="about">
-                <div class="keypoints">
+                <div class="keypoints reversed">
                     <img
                         src="./images/mobile/image-transform.jpg"
                         alt="image-transform"
