--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,7 @@
 
             <section class="about">
                 <div class="keypoints reversed">
-                    <img
-                        src="./images/mobile/image-transform.jpg"
-                        alt="image-transform"
-                    />
+                    <div class="bgcImg transformImage"></div>
                     <div class="contentBox">
                         <h2>Transform your brand</h2>
                         <p>
@@ -69,10 +66,7 @@
                 </div>
 
                 <div class="keypoints">
-                    <img
-                        src="./images/mobile/image-stand-out.jpg"
-                        alt="image-stand-out"
-                    />
+                    <div class="bgcImg standout"></div>
                     <div class="contentBox">
                         <h2>Stand out to the right audience</h2>
                         <p>
@@ -110,7 +104,7 @@
                 </div>
             </section>
 
-            <!-- <section class="testimonials">
+            <section class="testimonials">
                 <h4>Client testimonials</h4>
                 <div class="testimonialcontainer">
                     <div class="testimonial">
@@ -143,7 +137,7 @@
                 </div>
             </section>
 
-            <section class="images">
+            <!-- <section class="images">
                 <img src="" alt="photo" /><img src="" alt="photo" /><img
                     src=""
                     alt="photo"
