working on testimonials section mobile

--- a/src/index.html
+++ b/src/index.html
@@ -105,9 +105,10 @@
             </section>
 
             <section class="testimonials">
-                <h4>Client testimonials</h4>
                 <div class="testimonialcontainer">
+                    <h4>Client testimonials</h4>
                     <div class="testimonial">
+                        <img src="./images/image-emily.jpg" alt="Emily" />
                         <p class="quote">
                             We put our trust in Sunnyside and they delivered,
                             making sure our needs were met and deadlines were
@@ -117,6 +118,7 @@
                         <p class="position">Marketing Director</p>
                     </div>
                     <div class="testimonial">
+                        <img src=".//images/image-thomas.jpg" alt="Thomas" />
                         <p class="quote">
                             Sunnyside’s enthusiasm coupled with their keen
                             interest in our brand’s success made it a satisfying
@@ -127,6 +129,7 @@
                     </div>
 
                     <div class="testimonial">
+                        <img src=".//images/image-jennie.jpg" alt="Jennie" />
                         <p class="quote">
                             Incredible end result! Our sales increased over 400%
                             when we worked with Sunnyside. Highly recommended!
