working on footer

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
         <link
             rel="icon"
             type="image/png"
@@ -146,14 +145,39 @@
                 <div class="iceCream"></div>
                 <div class="sugarCubes"></div>
             </section>
-            <!--
+
             <footer>
-                <ul>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
-                    <li><a href="">Projects</a></li>
-                </ul>
-            </footer> -->
+                <div class="footerNav">
+                    <img src="./images/logo.svg" alt="logo" />
+                    <ul>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Projects</a></li>
+                    </ul>
+                </div>
+                <div class="socialBar">
+                    <a href=""
+                        ><img
+                            src="./images/icon-facebook.svg"
+                            alt="icon-facebook"
+                    /></a>
+                    <a href=""
+                        ><img
+                            src="./images/icon-instagram.svg"
+                            alt="icon-instagram"
+                    /></a>
+                    <a href=""
+                        ><img
+                            src="./images/icon-twitter.svg"
+                            alt="icon-twitter"
+                    /></a>
+                    <a href=""
+                        ><img
+                            src="./images/icon-pinterest.svg"
+                            alt="icon-pinterest"
+                    /></a>
+                </div>
+            </footer>
         </div>
         <script src="./js/main.js"></script>
     </body>
