--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
 
             <footer>
                 <div class="footerNav">
-                    <img src="./images/logo.svg" alt="logo" />
+                    <img src="./images/footerlogo.svg" alt="logo" />
                     <ul>
                         <li><a href="">About</a></li>
                         <li><a href="">Services</a></li>
