working on contact section

--- a/src/index.html
+++ b/src/index.html
@@ -1,184 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link
             rel="icon"
             type="image/png"
             sizes="32x32"
             href="./images/favicon-32x32.png"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link
             href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
             rel="stylesheet"
+    />
+    <link rel="stylesheet" href="scss/style.scss"/>
+    <title>Frontend Mentor | Sunnyside agency landing page</title>
+</head>
+
+<body>
+<div class="wrapper">
+    <header>
+        <nav>
+            <img src="./images/logo.svg" alt="logo" class="logo"/><img
+                src="./images/icon-hamburger.svg"
+                alt="icon-hamburger"
+                class="burger"
         />
-        <link rel="stylesheet" href="scss/style.scss" />
-        <title>Frontend Mentor | Sunnyside agency landing page</title>
-    </head>
 
-    <body>
-        <div class="wrapper">
-            <header>
-                <nav>
-                    <img src="./images/logo.svg" alt="logo" class="logo" /><img
-                        src="./images/icon-hamburger.svg"
-                        alt="icon-hamburger"
-                        class="burger"
-                    />
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
 
-                    <ul>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Contact</a></li>
-                    </ul>
-                </nav>
-
-                <div class="cta">
-                    <h1>We are creatives</h1>
-                    <img
-                        src="./images/icon-arrow-down.svg"
-                        alt="icon-arrow-down"
-                        class="arrow"
-                    />
-                </div>
-            </header>
-
-            <section class="about">
-                <div class="keypoints reversed">
-                    <div class="bgcImg transformImage"></div>
-                    <div class="contentBox">
-                        <h2>Transform your brand</h2>
-                        <p>
-                            We are a full-service creative agency specializing
-                            in helping brands grow fast. Engage your clients
-                            through compelling visuals that do most of the
-                            marketing for you.
-                        </p>
-                        <div class="button">
-                            <button class="yellow">Learn more</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="keypoints">
-                    <div class="bgcImg standout"></div>
-                    <div class="contentBox">
-                        <h2>Stand out to the right audience</h2>
-                        <p>
-                            Using a collaborative formula of designers,
-                            researchers, photographers, videographers, and
-                            copywriters, we’ll build and extend your brand in
-                            digital places.
-                        </p>
-                        <div class="button"><button>Learn more</button></div>
-                    </div>
-                </div>
-
-                <div class="keypoints">
-                    <div class="additionalPoints cherry">
-                        <div>
-                            <h3>Graphic design</h3>
-                            <p>
-                                Great design makes you memorable. We deliver
-                                artwork that underscores your brand message and
-                                captures potential clients’ attention.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="additionalPoints orange">
-                        <div>
-                            <h3>Photography</h3>
-                            <p>
-                                Increase your credibility by getting the most
-                                stunning, high-quality photos that improve your
-                                business image.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="testimonials">
-                <div class="testimonialcontainer">
-                    <h4>Client testimonials</h4>
-                    <div class="testimonial">
-                        <img src="./images/image-emily.jpg" alt="Emily" />
-                        <p class="quote">
-                            We put our trust in Sunnyside and they delivered,
-                            making sure our needs were met and deadlines were
-                            always hit.
-                        </p>
-                        <p class="author">Emily R.</p>
-                        <p class="position">Marketing Director</p>
-                    </div>
-                    <div class="testimonial">
-                        <img src=".//images/image-thomas.jpg" alt="Thomas" />
-                        <p class="quote">
-                            Sunnyside’s enthusiasm coupled with their keen
-                            interest in our brand’s success made it a satisfying
-                            and enjoyable experience.
-                        </p>
-                        <p class="author">Thomas S.</p>
-                        <p class="position">Chief Operating Officer</p>
-                    </div>
-
-                    <div class="testimonial">
-                        <img src=".//images/image-jennie.jpg" alt="Jennie" />
-                        <p class="quote">
-                            Incredible end result! Our sales increased over 400%
-                            when we worked with Sunnyside. Highly recommended!
-                        </p>
-                        <p class="author">Jennie F.</p>
-                        <p class="position">Business Owner</p>
-                    </div>
-                </div>
-            </section>
-
-            <section class="images">
-                <div class="milk"></div>
-                <div class="orangePlate"></div>
-                <div class="iceCream"></div>
-                <div class="sugarCubes"></div>
-            </section>
-
-            <footer>
-                <div class="footerNav">
-                    <img src="./images/footerlogo.svg" alt="logo" />
-                    <ul>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Services</a></li>
-                        <li><a href="">Projects</a></li>
-                    </ul>
-                </div>
-                <div class="socialBar">
-                    <a href=""
-                        ><img
-                            src="./images/icon-facebook.svg"
-                            alt="icon-facebook"
-                    /></a>
-                    <a href=""
-                        ><img
-                            src="./images/icon-instagram.svg"
-                            alt="icon-instagram"
-                    /></a>
-                    <a href=""
-                        ><img
-                            src="./images/icon-twitter.svg"
-                            alt="icon-twitter"
-                    /></a>
-                    <a href=""
-                        ><img
-                            src="./images/icon-pinterest.svg"
-                            alt="icon-pinterest"
-                    /></a>
-                </div>
-            </footer>
+        <div class="cta">
+            <h1>We are creatives</h1>
+            <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="icon-arrow-down"
+                    class="arrow"
+            />
         </div>
-        <script src="./js/main.js"></script>
-    </body>
+    </header>
+
+    <section id="about">
+        <div class="keypoints reversed">
+            <div class="bgcImg transformImage"></div>
+            <div class="contentBox">
+                <h2>Transform your brand</h2>
+                <p>
+                    We are a full-service creative agency specializing
+                    in helping brands grow fast. Engage your clients
+                    through compelling visuals that do most of the
+                    marketing for you.
+                </p>
+                <div class="button">
+                    <button class="yellow">Learn more</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="keypoints">
+            <div class="bgcImg standout"></div>
+            <div class="contentBox">
+                <h2>Stand out to the right audience</h2>
+                <p>
+                    Using a collaborative formula of designers,
+                    researchers, photographers, videographers, and
+                    copywriters, we’ll build and extend your brand in
+                    digital places.
+                </p>
+                <div class="button">
+                    <button>Learn more</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="keypoints" id="services">
+            <div class="additionalPoints cherry">
+                <div>
+                    <h3>Graphic design</h3>
+                    <p>
+                        Great design makes you memorable. We deliver
+                        artwork that underscores your brand message and
+                        captures potential clients’ attention.
+                    </p>
+                </div>
+            </div>
+
+            <div class="additionalPoints orange">
+                <div>
+                    <h3>Photography</h3>
+                    <p>
+                        Increase your credibility by getting the most
+                        stunning, high-quality photos that improve your
+                        business image.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonials">
+        <div class="testimonialcontainer">
+            <h4>Client testimonials</h4>
+            <div class="testimonial">
+                <img src="./images/image-emily.jpg" alt="Emily"/>
+                <p class="quote">
+                    We put our trust in Sunnyside and they delivered,
+                    making sure our needs were met and deadlines were
+                    always hit.
+                </p>
+                <p class="author">Emily R.</p>
+                <p class="position">Marketing Director</p>
+            </div>
+            <div class="testimonial">
+                <img src=".//images/image-thomas.jpg" alt="Thomas"/>
+                <p class="quote">
+                    Sunnyside’s enthusiasm coupled with their keen
+                    interest in our brand’s success made it a satisfying
+                    and enjoyable experience.
+                </p>
+                <p class="author">Thomas S.</p>
+                <p class="position">Chief Operating Officer</p>
+            </div>
+
+            <div class="testimonial">
+                <img src=".//images/image-jennie.jpg" alt="Jennie"/>
+                <p class="quote">
+                    Incredible end result! Our sales increased over 400%
+                    when we worked with Sunnyside. Highly recommended!
+                </p>
+                <p class="author">Jennie F.</p>
+                <p class="position">Business Owner</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="images">
+        <div class="milk"></div>
+        <div class="orangePlate"></div>
+        <div class="iceCream"></div>
+        <div class="sugarCubes"></div>
+    </section>
+    <section id="contact-section">
+        <div class="form-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24183.894792908377!2d-73.94448923942666!3d40.74031489325027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ed16db83ad1%3A0xbc845c2a1ddd9c48!2sSunnyside%2C%20Queens%2C%20Nowy%20Jork%2C%20Stany%20Zjednoczone!5e0!3m2!1spl!2spl!4v1635853114820!5m2!1spl!2spl"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="form-container">
+<!--            @todo change form into mail, number, opening hours-->
+            <form type="submit">
+                <input type="text" id="fname" name="fname" placeholder="Name"><br><br>
+                <input type="email" id="mail" name="mail" placeholder="E-mail"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footerNav">
+            <img src="./images/footerlogo.svg" alt="logo"/>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Projects</a></li>
+            </ul>
+        </div>
+        <div class="socialBar">
+            <a href=""
+            ><img
+                    src="./images/icon-facebook.svg"
+                    alt="icon-facebook"
+            /></a>
+            <a href=""
+            ><img
+                    src="./images/icon-instagram.svg"
+                    alt="icon-instagram"
+            /></a>
+            <a href=""
+            ><img
+                    src="./images/icon-twitter.svg"
+                    alt="icon-twitter"
+            /></a>
+            <a href=""
+            ><img
+                    src="./images/icon-pinterest.svg"
+                    alt="icon-pinterest"
+            /></a>
+        </div>
+    </footer>
+</div>
+<script src="./js/main.js"></script>
+</body>
 </html>
